--- a/doc/relazione.tex
+++ b/doc/relazione.tex
@@ -3,30 +3,26 @@
 \usepackage[T1]{fontenc}   
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
-
-% font
-\usepackage{times}
-
-% enable hyperref for example from index
-\usepackage[colorlinks=false, pdfborder={0 0 0}]{hyperref}
-
-% images
-\usepackage{graphicx}
+\usepackage{times} % Selected font
+\usepackage{xcolor} % Colors
+\usepackage[colorlinks=true, linkcolor=blue, citecolor=blue, urlcolor=blue, pdfborder={0 0 0}]{hyperref}
+\usepackage{graphicx} % Images
 \graphicspath{{img/}}
+\usepackage{setspace} % For flexible line spacing management
+\usepackage[margin=1in]{geometry} % Page geom
+\usepackage{lastpage} % To track the total number of pages
+\usepackage{fancyhdr} % To define a custom page numbering style
+\usepackage[backend=biber, style=alphabetic, sorting=ydnt]{biblatex} % To include bibliography
+\addbibresource{riferimenti.bib}
 
-% interline
-\renewcommand{\baselinestretch}{1.5} 
-
-% page geom
-\usepackage[margin=1in]{geometry}
-
-\usepackage{lastpage} % per tenere traccia del numero totale di pagine
-\usepackage{fancyhdr} % per definire uno stile di numerazione personalizzato
-
-\usepackage{lipsum} % TODO: temporaneo, solo per riempire con contenuto casuale
+\setlength{\parskip}{1em}
+\setlength{\parindent}{0pt}
+\usepackage{enumitem} % To avoid interline between bullets and text before them
+\setlist[itemize]{topsep=0pt, partopsep=0pt, parsep=0pt}
 
 \begin{document}
 
+\begin{spacing}{1.5}
 \begin{titlepage}
 
 \begin{center}
@@ -34,15 +30,15 @@
 % marchio di ateneo
 \includegraphics[width=6.5cm,height=4.7cm]{marchio-di-ateneo}
 
-\vspace{10mm}
+\vspace{4mm}
 
 {Dipartimento di Informatica - Scienza e Ingegneria - DISI} 
 
-\vspace{5mm}
+\vspace{2mm}
 
 {\large{Corso di Laurea in Ingegneria e Scienze Informatiche}}
 
-\vspace{15mm}
+\vspace{10mm}
 
 {\huge{\bf{IMPLEMENTAZIONE CUDA DI}}}\\
 \vspace{3mm}
@@ -80,9 +76,36 @@
 \end{center}
 
 \end{titlepage}
+\end{spacing}
 
 \begin{abstract}
-\lipsum[1-3]
+La Tomografia Computerizzata (TC) è una tecnica diagnostica che sfrutta le radiazioni ionizzanti (o raggi X) per ottenere
+un'immagine tridimensionale di un'entità analizzata.
+Questa tecnica si basa sulla raccolta, da parte di un rilevatore, di una matrice di dati 2D.
+Tale matrice è costruita a partire da considerazioni fatte sull'attenuazione dei raggi X che, diretti da una sorgente verso il
+rilevatore, passano attraverso l'oggetto di studio, vagliandolo.
+Facendo ruotare la sorgente e il rilevatore, lungo una traiettoria nota, molte matrici di dati vengono in genere raccolte.
+Queste matrici 2D vengono poi trasferite in un calcolatore che ha il compito di ricostruire l'entità scansionata in 3D.
+Questo consente di esaminare l'oggetto ricostruito, osservandone alcune caratteristiche della sua struttura interna non note a
+priori, senza doverlo a tal scopo necessariamente disassemblare.
+
+Nonostante sfruttata principalmente in ambito medico, la teoria su cui si basa la TC, in realtà, non fu ideata per scopi medici.
+Infatti tale tecnica trova applicazione in numerosi altri ambiti oltre alla medicina, tra cui vari settori industriali, la
+paleontologia, l'archeologia e numerosi altri campi.
+
+Il principio su cui si basa ha origine grazie al matematico austriaco Johann Radon, che nel 1917 dimostrò la possibilità di
+ricostruire un oggetto tridimensionale mediante un numero infinito di proiezioni bidimensionali dell'oggetto stesso.
+Dal punto di vista matematico, questo rappresenta un problema inverso, cioè si determinano le cause (immagine 3D) a partire dagli
+effetti osservati (proiezioni 2D).
+
+In questa analisi viene invece affrontato il problema diretto: partendo dal corpo studiato si devono perciò determinare le
+proiezioni che una TC potrebbe generare.
+Gli obiettivi di questo lavoro sono:
+\begin{itemize}
+  \item Implementare una versione CUDA di un certo algoritmo di proiezione proposto da Siddon \cite{Siddon1984} partendo da
+        una sua implementazione parallela in C che sfrutta OpenMP \cite{Colletta2025}.
+  \item Analizzare le prestazioni della versione CUDA per GPU e confrontarle con la versione parallela per CPU già nota.
+\end{itemize}
 \end{abstract}
 
 \fancypagestyle{fancy}{\fancyfoot[C]{\thepage}}
@@ -99,32 +122,17 @@
 \pagenumbering{arabic}
 
 % Chapter 1
-\chapter{L'inizio}
+\chapter{Introduzione}
 
-\section{Predisponendo la scena}
-\lipsum[1-2] % Placeholder text
-\section{Un primo incontro}
-\lipsum[3-4]
-
-% Chapter 2
-\chapter{Una nuova scoperta}
-
-\section{Eventi inaspettati}
-\lipsum[5-6]
-\section{Un cambiamento degli eventi}
-\lipsum[7-8]
-
-% Chapter 3
-\chapter{La risoluzione}
-
-\section{Conflitto finale}
-\lipsum[9-10]
-\section{Riflessioni di chiusura}
-\lipsum[11-12]
+\dots
 
 \appendix
 
 \chapter{Conclusioni}
-\lipsum[13]
+
+\dots
+
+\printbibliography
+\thispagestyle{empty}
 
 \end{document}
