--- a/doc/relazione.tex
+++ b/doc/relazione.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt,a4paper]{report}
 
-\usepackage[T1]{fontenc}   
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
 \usepackage{times} % Selected font
@@ -17,11 +17,8 @@
 \usepackage[backend=biber, style=alphabetic, sorting=ydnt]{biblatex} % To include bibliography
 \addbibresource{riferimenti.bib}
 \usepackage{amsmath} % Necessary for \text{} command inside maths notations
-\setlength{\parskip}{1em} % Set global paragraph spacing
+\setlength{\parskip}{0.5em} % Set global paragraph spacing
 \setlength{\parindent}{0pt} % No paragraph indentation
-% Remove \parskip after figures
-\BeforeBeginEnvironment{figure}{\setlength{\parskip}{0pt}}
-\AfterEndEnvironment{figure}{\addtolength{\parskip}{1pt}}
 \usepackage{enumitem} % To avoid interline between bullets and text before them
 \setlist[itemize]{topsep=0pt, partopsep=0pt, parsep=0pt}
 \usepackage{tikz} % To draw graphs
@@ -39,7 +36,7 @@
 
 \vspace{4mm}
 
-{Dipartimento di Informatica - Scienza e Ingegneria - DISI} 
+{Dipartimento di Informatica - Scienza e Ingegneria - DISI}
 
 \vspace{2mm}
 
@@ -143,7 +140,7 @@ Questo implica che il numero di proiezioni generate è esso stesso molto variabi
 
 Nelle sezioni seguenti, verrà descritto il modello matematico alla base della computazione, questo sarà direttamente collegato con
 le sue applicazioni nell'algoritmo risolutivo, infine una descrizione del problema dal punto di vista geometrico sarà
-esaminata (seguendo \cite{Colletta2024}).
+esaminata.
 
 \section{Il modello matematico}
 
@@ -152,8 +149,7 @@ alla base della creazione delle proiezioni, vedi \cite{MoroLoli2021}.
 
 \subsection{La legge di Lambert-Beer}
 
-Dal punto di vista fisico, i dati di proiezione riflettono l'assorbimento dei fotoni che costituiscono i raggi X, e l'immagine
-dell'oggetto scansionato è una rappresentazione della mappa dei coefficienti di attenuazione in pseudo-colori.
+Dal punto di vista fisico, i dati di proiezione riflettono l'assorbimento dei fotoni che costituiscono i raggi X.
 Il modello fisico che descrive l'assorbimento dei fotoni in termini di coefficienti di attenuazione è descritto dalla legge di
 Lambert-Beer.
 
@@ -194,15 +190,16 @@ L'\autoref{eq:law_lambert-beer} nel caso discreto, per calcolare una singola pro
 
 Dove:
 \begin{itemize}
-  \item \(j\) è il \(j\)-esimo voxel (degli \(N\) totali).
-  \item \(i\) è l'\(i\)-esimo raggio considerato.
-  \item \(n_p\) è il numero di raggi usati per il calcolo della proiezione.
-  \item \(N\) è il numero di voxel che costituiscono il corpo, dato da \(N_x \cdot N_y \cdot N_z\).
+  \item \(i\) è l'\(i\)-esimo raggio, degli \(n_p\) considerati per quella proiezione.
+  \item \(j\) è il \(j\)-esimo voxel, degli \(N\) totali che approssimano il corpo.
   \item \(g_i\) è l'attenuazione subita dall'\(i\)-esimo raggio.
-  \item \(M\) è una matrice di \(n_p \times N\) elementi che per ogni raggio definisce la lunghezza della porzione sottesa al
-        volume di ciascun voxel.
+  \item \(M_{i,j}\) è una matrice di \(n_p \times N\) elementi che per ogni raggio \(i\) definisce la lunghezza della porzione
+        sottesa al volume di ciascun voxel \(j\).
   \item \(f_j\) è il valore del coefficiente di attenuazione assunto nel volume interno al \(j\)-esimo voxel.
 \end{itemize}
+
+Matematicamente quindi, per il calcolo delle proiezioni, viene considerata un'approssimazione dell'oggetto analizzato, vedi
+\autoref{fig:CT_cube_to_voxels}.
 
 \begin{figure}[H]
   \centering
@@ -214,59 +211,53 @@ Dove:
       \draw[gray] (\i,6,0) -- (\i,6,6);
       \draw[gray] (0,6,\i) -- (6,6,\i);
     }
-    
+
     % Draw the grid on the left face
     \foreach \i in {0,...,6} {
       \draw[gray] (\i,0,6) -- (\i,6,6);
       \draw[gray] (0,\i,6) -- (6,\i,6);
     }
-    
+
     % Draw the grid on the right face
     \foreach \i in {0,...,6} {
       \draw[gray] (6,0,\i) -- (6,6,\i);
       \draw[gray] (6,\i,0) -- (6,\i,6);
     }
-    
+
     % Outline the cube
-    \draw[thick] (0,6,0) -- (6,6,0) -- (6,6,6) -- (0,6,6) -- (0,6,0); % Top face
-    \draw[thick] (0,0,6) -- (6,0,6) -- (6,0,0); % Bottom face
-    \draw[thick] (0,6,6) -- (0,0,6); % Left vertical
-    \draw[thick] (6,6,6) -- (6,0,6); % Center vertical
-    \draw[thick] (6,6,0) -- (6,0,0); % Right vertical
-    
+    \draw[thick, darkgray] (0,6,0) -- (6,6,0) -- (6,6,6) -- (0,6,6) -- (0,6,0); % Top face
+    \draw[thick, darkgray] (0,0,6) -- (6,0,6) -- (6,0,0); % Bottom face
+    \draw[thick, darkgray] (0,6,6) -- (0,0,6); % Left vertical
+    \draw[thick, darkgray] (6,6,6) -- (6,0,6); % Center vertical
+    \draw[thick, darkgray] (6,6,0) -- (6,0,0); % Right vertical
+
     % Add axis arrows
-    \draw[->,thick] (6,0,0) -- (8,0,0) node[below right] {$x$}; % x-axis
-    \draw[->,thick] (0,6,0) -- (0,8,0) node[left] {$y$};        % y-axis
-    \draw[->,thick] (0,0,6) -- (0,0,8) node[below left] {$z$};  % z-axis
-    
-    % Add a point above the cube
-    \draw[dashed] (3,6,3) -- (3,6.9,3);
-    % \fill[green] (3,7,3) circle (4pt);
-    % \node[above, draw=none] at (3,7.1,3) {Source};
-    \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=0pt, label=above:Source] at (3,6.9,3) {};
+    \draw[->] (6,0,0) -- (8,0,0) node[below right] {$x$}; % x-axis
+    \draw[->] (0,6,0) -- (0,8,0) node[left] {$y$};        % y-axis
+    \draw[->] (0,0,6) -- (0,0,8) node[below left] {$z$};  % z-axis
 
     % Label the cube sides
     \node[below left] at (3,0,6) {$N_x$};
     \node[below right] at (6,0,3) {$N_z$};
     \node[left] at (0,3,6) {$N_y$};
-      
+
     \end{tikzpicture}
   }
-  \caption{\label{fig:CT_ex_cube_voxels} Esempio di oggetto cubico suddiviso in \(N = N_x \cdot N_y \cdot N_z\) voxel cubici.
-           Solitamente i voxel sono dei parallelepipedi, nel caso più semplice possono essere dei cubi con una dimensione
-           \(d = d_x = d_y = d_z\) fissata in base alle necessità.}
+  \caption{\label{fig:CT_cube_to_voxels} Esempio di oggetto cubico suddiviso in \(N = N_x \times N_y \times N_z\) voxel cubici.
+           Nel caso generale i voxel sono dei parallelepipedi retti, nel caso più semplice possono essere dei cubi con una
+           dimensione \(d = d_x = d_y = d_z\) fissata in base alle necessità.}
 \end{figure}
 
 Nel caso discreto della trasformata di Radon il numero di proiezioni dipende dal numero di posizioni considerate in cui si
-posiziona la sorgente, tale numero verrà di seguito indicato con \(N_\theta\).
-In \autoref{fig:CT_ex_cube_voxels} solo una di queste proiezioni verrà catturata, visto che la sorgente è posta in una posizione
-fissata, ad un certo angolo.
+effettuano le scansioni, tale numero verrà di seguito indicato con \(N_\theta\).
+Ad ogni posizione la sorgente ed il rilevatore sono posi in modo opportuno con il fine di analizzare lo stesso oggetto da più
+angolazioni diverse.
 
 \section{Algoritmo risolutivo}
 
 Considerando quanto già visto nel modello matematico, nel nostro caso l'algoritmo di Siddon si occupa di determinare la matrice
 \(M\), mentre il vettore \(f\) deve essere già noto in partenza.
-Questa matrice e vettore rispettivamente devono essere noti per poter procedere con la computazione.
+Questa dati devono quindi essere determinati per poter procedere con la computazione.
 
 L'algoritmo svolge una computazione equivalente a quella descritta nell'\autoref{eq:law_lambert-beer_discrete}:
 \begin{equation*}
@@ -286,14 +277,14 @@ voxel (equivalente di \(M\)) mentre \(\rho\) rappresenta la densità del voxel (
     \begin{scope}
       \refstepcounter{figcounter} % Increment the counter
       % Grid
-      \draw[step=1cm, gray, thin] (0,0) grid (6,6);
+      \draw[step=1cm, gray] (0,0) grid (6,6);
 
       % Source and detector
       \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=above:Source] (source1) at (-2, 6.5) {};
-      \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector1) at (6.5, -2) {};
+      \node[draw=none, fill=cyan, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector1) at (6.5, -2) {};
 
       % Ray line
-      \draw[gray, thick] (source1) -- (detector1);
+      \draw[purple] (source1) -- (detector1);
 
       % Intersections
       \foreach \i in {0,...,9}{
@@ -308,18 +299,18 @@ voxel (equivalente di \(M\)) mentre \(\rho\) rappresenta la densità del voxel (
       \refstepcounter{figcounter} % Increment the counter
       % Planes
       \foreach \y in {0,...,6} {
-        \draw[gray, thin] (-2,\y) -- (8,\y); % Horizontal lines
+        \draw[gray] (-2,\y) -- (8,\y); % Horizontal lines
       }
       \foreach \x in {0,...,6} {
-          \draw[gray, thin] (\x,-2) -- (\x,8); % Vertical lines
+          \draw[gray] (\x,-2) -- (\x,8); % Vertical lines
       }
 
       % Source and detector
       \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=0pt, label=above:Source] (source2) at (-2, 6.5) {};
-      \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=0pt, label=below:Detector] (detector2) at (6.5, -2) {};
+      \node[draw=none, fill=cyan, circle, minimum size=10pt, inner sep=0pt, label=below:Detector] (detector2) at (6.5, -2) {};
 
       % Ray line
-      \draw[gray, thick] (source2) -- (detector2);
+      \draw[purple] (source2) -- (detector2);
 
       % Intersections
       \fill[red] (-1.5,6.0) circle (3pt);
@@ -333,21 +324,19 @@ voxel (equivalente di \(M\)) mentre \(\rho\) rappresenta la densità del voxel (
     \end{scope}
     \end{tikzpicture}
   }
-  \caption{\label{fig:CT_Siddon_grid_to_planes} Pixel (voxel nel caso 2D) considerati come piani paralleli che ne rappresentano
-           la struttura.
-           Come si può notare alcune intersezioni tra il raggio e i piani non sono valide perché fuori dalla griglia, guarda i
-           puntini rossi della figura \textit{b}.
-           La matrice \(M\) per questo raggio specificherà per ciascun pixel della griglia la lunghezza del segmento del raggio
-           all'interno di quel pixel.}
+  \caption{\label{fig:CT_Siddon_grid_to_planes} Pixel (voxel nel caso 2D) considerati come rette parallele che rappresentano la
+           struttura dell'oggetto considerato.
+           Come si può notare alcune intersezioni tra il raggio e i piani non sono valide perché fuori dalla griglia, vedi i
+           puntini rossi della figura \textit{b}.}
 \end{figure}
 
 I punti chiave dell'algoritmo, nella determinazione della matrice \(M\), possono essere così riassunti:
 \begin{itemize}
-  \item L'algoritmo considera, invece dei singoli voxel indipendenti, tre insiemi (spazio 3D) di rette ortogonali ed equidistanti
-        tra loro che vanno a costruire la griglia di discretizzazione del corpo nello spazio
-        \autoref{fig:CT_Siddon_grid_to_planes}.
-  \item Si calcolano i punti di intersezione tra le rette (i raggi) e i piani che definiscono i voxel.
-  \item Si calcola la lunghezza dei segmenti sottesi ai voxel, come la differenza tra punti di intersezione consecutivi.
+  \item L'algoritmo considera, invece dei singoli voxel indipendenti, tre insiemi di piani ortogonali ed equidistanti tra loro che
+        vanno a costruire la griglia di discretizzazione del corpo nello spazio, vedi \autoref{fig:CT_Siddon_grid_to_planes}.
+  \item Si calcolano i punti di intersezione tra le rette, i raggi, e i piani che definiscono i voxel.
+  \item Si calcola la lunghezza dei segmenti sottesi ai voxel, come la differenza tra punti di intersezione consecutivi,
+        determinando così la matrice \(M\).
 \end{itemize}
 
 \subsection{Il vettore \(f\)}
@@ -371,16 +360,122 @@ Le tre diverse configurazioni, fornite da \cite{Colletta2024}, sono state qui ri
 Questa sezione approfondisce le considerazioni geometriche necessarie per poter procedere con l'implementazione dell'algoritmo di
 Siddon.
 
-\subsection{I piani}
+\subsection{Posizionamento sorgente, oggetto e rilevatore nello spazio}
 
-L'equazione cartesiana di un piano nello spazio tridimensionale è un'equazione di primo grado in tre incognite:
+\begin{figure}[H]
+  \centering
+  \resizebox{0.8\textwidth}{!}{
+    \begin{tikzpicture}[x={(0.9cm,-0.3cm)}, y={(0cm,1cm)}, z={(-0.9cm,-0.3cm)}]
+    \def\faces{6}
+    \def\halfFaces{3}
+
+    % Draw the grid on the top face
+    \foreach \i in {0,0.5,...,\halfFaces} {
+      \draw[gray] (\i,\halfFaces,0) -- (\i,\halfFaces,\halfFaces);
+      \draw[gray] (0,\halfFaces,\i) -- (\halfFaces,\halfFaces,\i);
+    }
+
+    % Draw the grid on the left face
+    \foreach \i in {0,0.5,...,\halfFaces} {
+      \draw[gray] (\i,0,\halfFaces) -- (\i,\halfFaces,\halfFaces);
+      \draw[gray] (0,\i,\halfFaces) -- (\halfFaces,\i,\halfFaces);
+    }
+
+    % Draw the grid on the right face
+    \foreach \i in {0,0.5,...,\halfFaces} {
+      \draw[gray] (\halfFaces,0,\i) -- (\halfFaces,\halfFaces,\i);
+      \draw[gray] (\halfFaces,\i,0) -- (\halfFaces,\i,\halfFaces);
+    }
+
+    % Draw the grid of the detector
+    \foreach \i in {0,0.5,...,9} {
+      \draw[cyan] (\i,-4,0) -- (\i,-4,9);
+      \draw[cyan] (0,-4,\i) -- (9,-4,\i);
+    }
+    \node[above right] at (3,-4,0) {Detector}; % Detector
+
+    % Outline the cube
+    \draw[thick, darkgray] (0,\halfFaces,0) -- (\halfFaces,\halfFaces,0) -- (\halfFaces,\halfFaces,\halfFaces) -- (0,\halfFaces,\halfFaces) -- (0,\halfFaces,0); % Top face
+    \draw[thick, darkgray] (0,0,\halfFaces) -- (\halfFaces,0,\halfFaces) -- (\halfFaces,0,0); % Bottom face
+    \draw[thick, darkgray] (0,\halfFaces,\halfFaces) -- (0,0,\halfFaces); % Left vertical
+    \draw[thick, darkgray] (\halfFaces,\halfFaces,\halfFaces) -- (\halfFaces,0,\halfFaces); % Center vertical
+    \draw[thick, darkgray] (\halfFaces,\halfFaces,0) -- (\halfFaces,0,0); % Right vertical
+
+    % Add axis arrows
+    \draw[->] (\halfFaces,\halfFaces/2,\halfFaces/2) -- (6,\halfFaces/2,\halfFaces/2) node[below right] {$x$}; % x-axis
+    \draw[->] (\halfFaces/2,\halfFaces,\halfFaces/2) -- (\halfFaces/2,6,\halfFaces/2) node[left] {$y$};        % y-axis
+    \draw[->] (\halfFaces/2,\halfFaces/2,\halfFaces) -- (\halfFaces/2,\halfFaces/2,6) node[below left] {$z$};  % z-axis, positive
+    \draw[] (\halfFaces,0,\halfFaces) -- (\halfFaces,-4.9,\halfFaces);  % z-axis, negative
+
+    % Add a point above the cube
+    \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=0pt, label=right:Source] at (\halfFaces/2,5,\halfFaces/2) {}; % Source
+
+    \end{tikzpicture}
+  }
+  \caption{\label{fig:CT_reference_plane} Esempio che rappresenta l'oggetto cubico già visto in \autoref{fig:CT_cube_to_voxels}
+           nel sistema di riferimento cartesiano considerato nelle discussioni seguenti.}
+\end{figure}
+
+In \autoref{fig:CT_reference_plane} sono rappresentati un oggetto di forma cubica, la sorgente ed il rilevatore, tutto posto
+in uno specifico sistema cartesiano, in cui il centro dell'oggetto corrisponde con l'origine degli assi.
+
+Nel nostro caso la posizione del punto sorgente, da cui partono i raggi, e dei pixel rilevatore, al centro di cui questi vengono
+a dirigersi, ruotano in un'orbita circolare in modo da scansionare il corpo da più posizioni.
+
+Quando la sorgente ruota in un senso nelle specifiche posizioni dell'orbita, il rilevatore ruota coerentemente nel senso opposto.
+
+\subsection{Le sorgenti}
+
+La sorgente è approssimata ad un punto, che indica la posizione a partire dalla quale sono diretti i raggi.
+Le posizioni considerate sono più di una e sono distribuite, nell'implementazione trattata, lungo una traiettoria circolare
+(o una sezione di essa) intorno all'oggetto.
+Rimane da determinarne ciascuna posizione.
+
+Conoscendo l'estensione angolare \(\theta\) della sezione della traiettoria considerata e la distanza angolare \(\alpha\) tra
+ciascuna posizione, si è scelto l'uso delle coordinate polari, dove una posizione è individuata dalla distanza dall'origine e
+dalla distanza angolare dall'asse polare.
+In accordo con la \autoref{fig:CT_reference_plane}, viene considerato un sistema di coordinate polari il cui polo coincide con
+il centro dell'oggetto di studio, mentre si adotta l'asse \(y\) come asse polare.
+La distanza angolare è positiva in senso orario nel piano \(xy\).
+
+La posizione della sorgente può essere individuata nel seguente modo:
+\begin{equation} \label{eq:goniometric_source_polar}
+  (d_s,-\theta/2 + \alpha i) \quad \text{per } i = 0, \dots, N_\theta - 1
+\end{equation}
+
+dove:
+\begin{itemize}
+  \item \(i\) è un indice che identifica una posizione della sorgente.
+  \item \(d_s\) è la distanza sorgente-origine.
+  \item \(N_\theta\) è il numero di posizioni dato dal rapporto \(N_\theta = \lfloor \theta/\alpha \rfloor + 1\).
+\end{itemize}
+
+Le coordinate cartesiane si ottengono a partire dalle coordinate polari nel seguente modo:
+\begin{equation} \label{eq:gonometric_source_coordinates}
+  \begin{cases}
+    X_i = \cos(\frac{\pi}{2} - (-\frac{\theta}{2} + \alpha i)) d_s = \sin(-\frac{\theta}{2} + \alpha i) d_s \\
+    Y_i = \sin(\frac{\pi}{2} - (-\frac{\theta}{2} + \alpha i)) d_s = \cos(-\frac{\theta}{2} + \alpha i) d_s \\
+    Z_i = 0
+  \end{cases} \quad \text{per } i = 0, \dots, N_\theta - 1
+\end{equation}
+dove sono state usate le formule degli archi associati per seno e coseno per ricondursi dal sistema sistema precedentemente
+descritto, senso orario a partire dal semi asse positivo delle \(y\), al sistema tradizionale per la misurazione di un angolo,
+senso antiorario a partire dal semi asse positivo delle \(x\).
+Inoltre, \(Z_i\) è posta a \(0\) in quanto, per costruzione, la traiettoria giace sul piano \(xy\).
+
+\subsection{L'oggetto}
+
+Un oggetto è approssimato da un certo numero di voxel, cioè parallelepipedi retti con dimensioni uniformi l'uno con l'altro.
+Le griglie che questi creano, dall'algoritmo di Siddon, sono rappresentate da un certo numero di piani paralleli tra loro.
+
+L'equazione cartesiana di un piano nello spazio è un'equazione di primo grado in tre incognite:
 \begin{equation*}
   ax + by + cz + d = 0 \quad \text{con } a, b, c, d \in \Re
 \end{equation*}
 
-Nell'algoritmo di Siddon, i piani considerati sono quelli che delimitano i volumi sottesi ai voxel.
-I voxel, come già detto, hanno dimensioni uniformi e forma di parallelepipedi.
-Di conseguenza i piani coinvolti sono paralleli agli assi cartesiani, dunque le loro equazioni sono nella forma:
+Avendo in mente \autoref{fig:CT_reference_plane}, i piani coinvolti, oltre che ad essere paralleli tra di loro, sono paralleli
+anche agli assi cartesiani.
+Dunque, le loro equazioni sono nella forma:
 \begin{align*}
   ax + d &= 0 \quad \text{se parallelo al piano } yz \\
   by + d &= 0 \quad \text{se parallelo al piano } xz \\
@@ -397,12 +492,141 @@ L'equazione degli altri piani a partire dal primo si determina nel seguente modo
 \end{align*}
 
 dove \(N_x\), \(N_y\) e \(N_z\) sono il numero di voxel lungo gli assi \(x\), \(y\) e \(z\), mentre \(d_x\), \(d_y\) e \(d_z\)
-sono a loro volta le dimensioni dei voxel lungo i tre assi cartesiani.
+sono a loro volta le dimensioni di un singolo voxel lungo i tre assi cartesiani.
 
-\subsection{Retta rappresentante un raggio}
+\subsection{Il rilevatore}
 
-Un raggio può essere rappresentato mediante l'equazione parametrica di una retta passante per due punti
-\(Source = (X_1, Y_1, Z_1)\) e \(Detector = (X_2, Y_2, Z_2)\):\
+Nel caso tridimensionale, il rilevatore può essere considerato una matrice di unità di misurazione, i pixel, posta ad una distanza
+\(d_r\) dal centro del corpo di studio.
+
+L'approccio usato per relazionare i raggi con il rilevatore è detto \textit{ray-driven}.
+Per ciascun unità del rilevatore si considera l'esistenza di un unico raggio passante, diretto dalla sorgente al centro del
+pixel stesso.
+Secondo questo approccio, il numero \(n_p\) di raggi usati per il calcolo della proiezione coincide con il numero di pixel del
+rilevatore.
+
+Il rilevatore è sempre ortogonale all'asse che congiunge la sorgente ed il centro del corpo.
+
+Le coordinate cartesiane del centro di un'unità del rilevatore, al variare dell'angolo considerato, sono \((X', Y', Z')\),
+derivate dalla posizione \((X, Y, Z)\), ricoperta nel caso in cui il rilevatore sia ortogonale all'asse \(y\).
+
+Considerando il semiasse negativo di \(y\) come asse polare, anche questa volta con angolo positivo in senso orario, le
+coordinate polari del punto sono:
+\begin{equation*} %\label{eq:goniometric_detector_polar}
+  (d_r, \delta)
+\end{equation*}
+dove \(\delta\) è l'angolo che identifica l'unità del rilevatore.
+
+Le coordinate a seguito della traslazione saranno:
+\begin{equation*}
+  (d_r, \delta - \lambda)
+\end{equation*}
+dove \(-\lambda\) è l'angolo di traslazione.
+
+Le coordinate di tale posizione traslata sono date da:
+\begin{equation} \label{eq:goniometric_detector_coordinates}
+  \begin{cases}
+    X' = \cos(\frac{3\pi}{2} - (\delta - \lambda)) d_r = -\sin(\delta - \lambda) d_r \\
+    Y' = \sin(\frac{3\pi}{2} - (\delta - \lambda)) d_r = -\cos(\delta - \lambda) d_r
+  \end{cases}
+\end{equation}
+dove, in modo analogo all'\autoref{eq:gonometric_source_coordinates}, sono state usate le formule degli archi associati per seno e
+coseno per ricondursi dal sistema sistema precedentemente descritto, senso orario a partire dal semi asse negativo delle \(y\), al
+sistema tradizionale per la misurazione di un angolo, senso antiorario a partire dal semi asse positivo delle \(x\).
+In questo caso \(Z\) è costante, \(Z' = Z\), in quanto, per costruzione, la traiettoria trasla sul piano \(xy\), senza influire
+sulla coordinata nell'asse \(z\), quindi verrà omessa nella discussione seguente.
+
+A partire dall'\autoref{eq:goniometric_detector_coordinates}, applicando le formule di addizione degli archi per seno e coseno si
+ottiene:
+\begin{equation*}
+  \begin{cases}
+    X' = - (\sin(\delta)\cos(-\lambda) d_r + \cos(\delta)\sin(-\lambda) d_r) \\
+    Y' = - (\cos(\delta)\cos(-\lambda) d_r - \sin(\delta)\sin(-\lambda) d_r)
+  \end{cases}
+\end{equation*}
+
+\begin{figure}[H]
+  \centering
+  \resizebox{0.4\textwidth}{!}{
+    \begin{tikzpicture}
+      % Define the radius of the circle trajectories
+      \def\SourceRadius{3}
+      \def\DetectorRadius{4}
+
+      % Define the points
+      \coordinate (S0) at ({\SourceRadius*cos(115)}, {\SourceRadius*sin(115)});
+      \coordinate (D0) at ({\DetectorRadius*cos(295)}, {\DetectorRadius*sin(295)});
+
+      % Draw the trajectories
+      % \draw[thick] (0,0) circle (\SourceRadius);
+      \draw[thick] (S0) arc[start angle=115,end angle=65,radius=\SourceRadius];
+      \draw[thick] (D0) arc[start angle=295,end angle=245,radius=\DetectorRadius];
+
+      % Draw the axes
+      \draw[->] (-\SourceRadius-0.5,0) -- (\SourceRadius+0.5,0) node[below right] {$x$};
+      \draw[->] (0,-\DetectorRadius-0.5) -- (0,\SourceRadius+0.5) node[above left] {$y$};
+      \draw[->] (0.5,0.5) -- (-\SourceRadius-0.5,-\SourceRadius-0.5) node[below left] {$z$};
+
+      % Draw lines from origin to points
+      \draw[purple] (S0) -- (D0);
+      \draw[dashed] (0,0) -- ({\SourceRadius*cos(65)}, {\SourceRadius*sin(65)});
+      \draw[dashed] (0,0) -- ({\DetectorRadius*cos(245)}, {\DetectorRadius*sin(245)});
+
+      % Draw the points
+      \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=0pt, label=above left:Source\textsubscript{0}] at (S0) {}; % Source
+      \node[draw=none, fill=cyan, circle, minimum size=10pt, inner sep=0pt, label=below right:Detector\textsubscript{0}] at (D0) {}; % Detector
+      % \fill[green] (S0) circle (2pt) node[above left] {$Source_0$};
+      % \fill[cyan] (D0) circle (2pt) node[below right] {$Detector_0$};
+
+      % Label theta angle
+      \draw[<->] ({(\SourceRadius/2)*cos(115)}, {(\SourceRadius/2)*sin(115)}) arc[start angle=115,end angle=65,radius=1.5];
+      \node[above right] at (0,1.5) {$\theta$};
+
+      % Label delta angle
+      \draw[->] (0,-2) arc[start angle=270,end angle=295,radius=2];
+      \node[] at (0.5,-2.3) {$\delta$};
+
+      % Label distance
+      \node at (-1,1.4) {$d_s$};
+      \node at (1.2,-1.7) {$d_r$};
+    \end{tikzpicture}
+  }
+  \caption{\label{fig:CT_polar_coordinates} Vista goniometrica di un raggio diretto dalla prima sorgente verso il centro del pixel
+           centrale nella matrice che rappresenta il rilevatore.
+           Il ragionamento può essere generalizzato anche per gli altri pixel.}
+\end{figure}
+
+Osservando \autoref{fig:CT_polar_coordinates}, dalle formule trigonometriche per i triangoli rettangoli:
+\begin{align*}
+  d_r = -\frac{X}{\sin(\delta)} = -\frac{Y}{\cos(\delta)}
+\end{align*}
+
+sostituendo \(d_r\) e sfruttando le formule degli archi associati per seno e coseno si ottiene:
+\begin{equation*}
+  \begin{cases}
+    X' = \cos(-\lambda) X + \sin(-\lambda) Y \\
+    Y' = \cos(-\lambda) Y - \sin(-\lambda) X
+  \end{cases}
+\end{equation*}
+
+Analogamente a quanto avviene con la sorgente, la posizione di una unità del rilevatore varia, ad intervalli regolari, di
+un angolo \(\alpha\) su di una sezione di ampiezza regolare pari a \(\theta\).
+Quindi, ricordando l'\autoref{eq:goniometric_source_polar}, si considera \(-\lambda = -\theta/2 + \alpha i\).
+Le posizioni di un'unità del rilevatore possono dunque essere ottenute, a partire dalla posizione precedente, con:
+\begin{equation*}
+  \begin{cases}
+    X'_i = \cos(-\theta/2 + \alpha i) X + \sin(-\theta/2 + \alpha i) Y \\
+    Y'_i = \cos(-\theta/2 + \alpha i) Y - \sin(-\theta/2 + \alpha i) X
+  \end{cases} \quad \text{per } i \in 0,\dots,N_\theta - 1
+\end{equation*}
+
+\subsection{I raggi}
+
+Un raggio, approssimazione di radiazioni elettromagnetiche, è considerato come un segmento che, nell'implementazione trattata,
+collega la sorgente con il centro di un pixel del rilevatore (approccio ray-driven).
+
+Può essere rappresentato mediante l'equazione parametrica di una retta passante per due punti \(Source = (X_1, Y_1, Z_1)\) e
+\(Detector = (X_2, Y_2, Z_2)\):
 \begin{align*}
   X(a) &= X_1 + a (X_2 - X_1) \\
   Y(a) &= Y_1 + a (Y_2 - Y_1) \\
@@ -418,14 +642,14 @@ Un raggio può essere rappresentato mediante l'equazione parametrica di una rett
     \begin{scope}[shift={(0,9)}]
         \refstepcounter{figcounter} % Increment the counter
         % Grid
-        \draw[step=1cm, gray, thin] (0,0) grid (6,6);
+        \draw[step=1cm, gray] (0,0) grid (6,6);
 
         % Source and detector
         \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=above:Source] (source1) at (-2, 6.5) {};
-        \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector1) at (6.5, -2) {};
+        \node[draw=none, fill=cyan, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector1) at (6.5, -2) {};
 
         % Ray line
-        \draw[gray, thick] (source1) -- (detector1);
+        \draw[purple] (source1) -- (detector1);
 
         % Parameters
         \fill[black] (0,4.5) circle (3pt);
@@ -438,14 +662,14 @@ Un raggio può essere rappresentato mediante l'equazione parametrica di una rett
     \begin{scope}[shift={(9,9)}]
       \refstepcounter{figcounter} % Increment the counter
       % Grid
-      \draw[step=1cm, gray, thin] (0,0) grid (6,6);
+      \draw[step=1cm, gray] (0,0) grid (6,6);
 
       % Source and detector
       \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=above:Source] (source2) at (1, 3.5) {};
-      \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector2) at (6.5, -2) {};
+      \node[draw=none, fill=cyan, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector2) at (6.5, -2) {};
 
       % Ray line
-      \draw[gray, thick] (source2) -- (detector2);
+      \draw[purple] (source2) -- (detector2);
 
       % Intersections
       \node[right, draw=none] at (1.2, 3.5) {\(a_{min} = 0\)};
@@ -457,14 +681,14 @@ Un raggio può essere rappresentato mediante l'equazione parametrica di una rett
     \begin{scope}[shift={(0,0)}]
         \refstepcounter{figcounter} % Increment the counter
         % Grid
-        \draw[step=1cm, gray, thin] (0,0) grid (6,6);
+        \draw[step=1cm, gray] (0,0) grid (6,6);
 
         % Source and detector
         \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=above:Source] (source3) at (-2, 6.5) {};
-        \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector3) at (3.5, 1) {};
+        \node[draw=none, fill=cyan, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector3) at (3.5, 1) {};
 
         % Ray line
-        \draw[gray, thick] (source3) -- (detector3);
+        \draw[purple] (source3) -- (detector3);
 
         % Intersections
         \fill[black] (0,4.5) circle (3pt);
@@ -476,14 +700,14 @@ Un raggio può essere rappresentato mediante l'equazione parametrica di una rett
     \begin{scope}[shift={(9,0)}]
       \refstepcounter{figcounter} % Increment the counter
       % Grid
-      \draw[step=1cm, gray, thin] (0,0) grid (6,6);
+      \draw[step=1cm, gray] (0,0) grid (6,6);
 
       % Source and detector
       \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=above:Source] (source4) at (1, 3.5) {};
-      \node[draw=none, fill=green, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector4) at (3.5, 1) {};
+      \node[draw=none, fill=cyan, circle, minimum size=10pt, inner sep=1.5pt, label=below:Detector] (detector4) at (3.5, 1) {};
 
       % Ray line
-      \draw[gray, thick] (source4) -- (detector4);
+      \draw[purple] (source4) -- (detector4);
 
       % Intersections
       \node[right, draw=none] at (1.2, 3.5) {\(a_{min} = 0\)};
@@ -496,16 +720,16 @@ Un raggio può essere rappresentato mediante l'equazione parametrica di una rett
            per ottenere solo le intersezioni con piani effettivamente all'interno della griglia di pixel (voxel nel caso 3D).
            Si può notare che \(a_{min}\) nelle figure \textit{a} e \textit{c} sarà maggiore di 0, così come \(a_{max}\) nelle
            figure \textit{a} e \textit{b} sarà minore di 1.
-           Questo permette di non considerate le intersezioni in eccesso, esterne alla griglia di partenza.}
+           Questo permette di non considerate le intersezioni in eccesso, esterne alla griglia di partenza, risolvendo il
+           problema esposto nella \autoref{fig:CT_Siddon_grid_to_planes}.}
 \end{figure}
 
 In questo modo:
 \begin{itemize}
   \item Per definire un raggio basta conoscere il punto "sorgente" ed il punto sul "rilevatore" dove avverrebbe la misurazione.
   \item È possibile rappresentare un punto appartenente alla retta del raggio attraverso un unico parametro \(a\), in particolare
-        \(a = 0\) coincide con il punto \(1\), \(a = 1\) coincide con il punto \(2\), per i valori di \(a\) compresi tra
-        \([0, 1]\) si hanno i punti appartenenti al segmento di cui i due punti, \(Source\) e \(Detector\), sono gli estremi, vedi
-        \autoref{fig:CT_Siddon_ranges}.
+        \(a = 0\) coincide con il punto \(Source\), \(a = 1\) coincide con il punto \(Detector\), per i valori di \(a\) compresi
+        tra \([0, 1]\) si hanno punti interni al segmento, vedi \autoref{fig:CT_Siddon_ranges}.
 \end{itemize}
 
 Il punto di intersezione di un raggio ed un piano lo si ottiene risolvendo in \(a\) il sistema lineare dato dall'equazione del
@@ -515,15 +739,15 @@ piano e una componente della retta come di seguito:
     &\begin{cases}
       X = X_1 + a (X_2 - X_1) \\
       X = X_{planes}(1) + (i - 1) d_x
-    \end{cases} \quad \text{se } i \in 1, \dots, N_x \\
+    \end{cases} \quad &\text{se } i \in 1, \dots, N_x \\
     &\begin{cases}
       Y = Y_1 + a (Y_2 - Y_1) \\
       Y = Y_{planes}(1) + (i - 1) d_y
-    \end{cases} \quad \text{se } i \in 1, \dots, N_y \\
+    \end{cases} \quad &\text{se } i \in 1, \dots, N_y \\
     &\begin{cases}
       Z = Z_1 + a (Z_2 - Z_1) \\
       Z = Z_{planes}(1) + (i - 1) d_z
-    \end{cases} \quad \text{se } i \in 1, \dots, N_z
+    \end{cases} \quad &\text{se } i \in 1, \dots, N_z
   \end{aligned} \nonumber
 \end{equation}
 
