Update thesis geometric considerations

--- a/doc/relazione.tex
+++ b/doc/relazione.tex
@@ -494,7 +494,7 @@ L'equazione degli altri piani a partire dal primo si determina nel seguente modo
 dove \(N_x\), \(N_y\) e \(N_z\) sono il numero di voxel lungo gli assi \(x\), \(y\) e \(z\), mentre \(d_x\), \(d_y\) e \(d_z\)
 sono a loro volta le dimensioni di un singolo voxel lungo i tre assi cartesiani.
 
-\subsection{Il rilevatore}
+\subsection{I rilevatori}
 
 Nel caso tridimensionale, il rilevatore può essere considerato una matrice di unità di misurazione, i pixel, posta ad una distanza
 \(d_r\) dal centro del corpo di studio.
